--- a/calculatrice.html
+++ b/calculatrice.html
@@ -21,9 +21,9 @@
         </div>
 
         <div class="clavier">
-            <span id="sept">7</span>
-            <span id="huit">8</span>
-            <span id="neuf">9</span>
+            <span onclick="calculatrice.afficheCalcul(7)">7</span>
+            <span onclick="calculatrice.afficheCalcul(8)">8</span>
+            <span onclick="calculatrice.afficheCalcul(9)">9</span>
             <span id="diviser">/</span>
             <span id="reset">C</span>
             <span id="quatre">4</span>
